Worked on connection bands in data graph
git-svn-id: svn://localhost:8080/caleydo_main/trunk@4277 1f7349ae-fd9f-0d40-aeb8-9798e6c0fce3